--- a/styles.css
+++ b/styles.css
@@ -239,26 +239,36 @@ hr {
 }
 
 
-header {
-    background-color: #333;
+header{
+    background-color:rgb(63, 53, 53);
     color: white;
     padding: 20px;
     text-align: center;
 }
 
-nav ul {
+.pin{
+    background-color: orangered;
+    width:100%;
+    height:30px;
+    margin-top: 20px;
+	font-family: 'Georgia', serif;
+
+}
+
+.pin ul {
     list-style-type: none;
     padding: 0;
 }
 
-nav ul li {
+.pin ul li {
     display: inline;
     margin: 0 15px;
 }
 
-nav ul li a {
+.pin ul li a {
     color: white;
     text-decoration: none;
+    font-size: 20px;
 }
 
 #profile_name_lastName{
@@ -305,3 +315,8 @@ nav ul li a {
     color:#ff7613;
 }
 
+h1{
+	font-size: 30px;
+	font-family: 'Georgia', serif;
+
+}
